# adapters/inbound/api-rest/src/main/kotlin/br/com/simulator/credit/creditas/rest/controller/LoanSimulationController.kt
@@ -56,6 +56,7 @@ class LoanSimulationController(
       BulkSimulationInitResponseDto(
         bulkId = bulkId,
         status = BulkSimulationInitResponseDto.Status.PROCESSING,
+        queryUrl = "/simulations/bulk/$bulkId",
       ),
     ).also {
       logger.info("Bulk simulation response: ${it.body}")
